Messing with experiments UI & fixed bug where the single experiments were overflowing the flexbox

--- a/src/components/style/experiments.css
+++ b/src/components/style/experiments.css
@@ -1,6 +1,8 @@
 #experiments-container {
-    height: 100%;
+    box-sizing: border-box;
+    min-height: 100vh;
     width: 100%;
+    height: max-content;
 
     display: flex;
     flex-flow: column nowrap;
@@ -8,10 +10,11 @@
     align-items: center;
     flex: 1 auto;
 
-    padding: 2rem 0;
+    padding: 2rem 1rem;
     margin: 0;
-
-    background: var(--experiments-page-bg);
+    
+    text-align: center;
+    background: var(--accent-green);
 }
 
 #experiments-header {
@@ -29,27 +32,6 @@
 
 #experiments-page-desc {
     font-size: var(--experiments-desc-size);
-}
-
-.effect-container {
-    box-sizing: border-box;
-    display: block;
-    width: 100%;
-    height: max-content;
-
-    margin: 1rem 0;
-    padding: 0.5rem 1rem;
-}
-
-#experiments-autotext {
-    text-align: center;
-    font-weight: bold;
-    font-size: var(--auto-text-font-size);
-    font-family: var(--font-family);
-    line-height: var(--auto-text-line-height);
-    
-    color: var(--auto-text-fg);
-    background: none;
 }
 
 #all-experiments {
@@ -79,7 +61,7 @@
     border-width: 1px;
     border-color: black;
 
-    background: white;
+    background: inherit;
 }
 
 .experiment-img {
@@ -91,8 +73,19 @@
     width: 200px;
     height: auto;
 
-    border-radius: 50%;
     margin: 0;
     padding: 0;
-
+    
+    border-radius: 50%;
 }
+
+.experiment-description {
+    box-sizing: border-box;
+    display: inline-block;
+
+    font-size: 1.5em;
+    text-align: center;
+
+    overflow-wrap: break-word;
+}
+
